fixed margin on mobile, added target blank for logo links

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -46,8 +46,10 @@
   }
 
   &__header {
-    @media (max-width: 360px) {
-      margin-bottom: 100px;
+    margin-bottom: 120px;
+
+    @include onTablet {
+      margin-bottom: 0;
     }
   }
 
